--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
             <i class="fas fa-times"></i>
         </form>
     </div>
+    <!--home section start  -->
+    <section class="home" id="home">
+        <h1>education form home</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum neque aliquid similique error velit placeat vitae accusantium est nam magnam?</p>
+        <a href="#"><button class="btn">get started</button></a>
+        <div class="shape"></div>
+    </section>
+    <!--home section end  -->
     <!-- jquery cdn link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- custom js file link -->
