added about section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
         <div class="shape"></div>
     </section>
     <!--home section end  -->
+    <!-- about section start -->
+    <section class="about" id="about">
+        <div class="image">
+            <img src="images/about-img.svg" alt="">
+        </div>
+        <div class="content">
+            <h3>who choose us?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aperiam quaerat dolor voluptas nobis voluptates illum? Inventore voluptas dolore voluptates.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aperiam quaerat dolor voluptas nobis voluptates illum? Inventore voluptas dolore voluptates.</p>
+            <a href="#"><button class="btn">learn more</button></a>
+        </div>
+    </section>
+    <!-- about section end -->
     <!-- jquery cdn link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- custom js file link -->
