--- a/index.html
+++ b/index.html
@@ -63,6 +63,133 @@
         </div>
     </section>
     <!-- about section end -->
+    <!-- course section start -->
+    <section class="course" id="course">
+        <h1 class="heading">our popular courses</h1>
+        <div class="box-container">
+            <div class="box">
+                <img src="images/course1.jpg" alt="">
+                <h3 class="price">$50</h3>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+                    </div>
+                    <a href="#" class="title">learn front end development</a>
+                    <p>Eu sint fugiat qui excepteur tempor excepteur eu quis. Deserunt elit mollit magna nulla enim voluptate ea deserunt cillum do et veniam occaecat incididunt. Duis consequat laborum cupidatat laborum consequat Lorem duis excepteur aliqua. Est dolor sunt magna aute cillum ea ut laboris incididunt dolore elit.</p>
+                    <div class="info">
+                        <h3><i class="far fa-clock"></i> 2 hours</h3>
+                        <h3><i class="far fa-calendar-alt"></i> 6 month</h3>
+                        <h3><i class="fas fa-book"></i> 12 modules</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/course2.jpg" alt="">
+                <h3 class="price">$50</h3>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+                    </div>
+                    <a href="#" class="title">learn front end development</a>
+                    <p>Eu sint fugiat qui excepteur tempor excepteur eu quis. Deserunt elit mollit magna nulla enim voluptate ea deserunt cillum do et veniam occaecat incididunt. Duis consequat laborum cupidatat laborum consequat Lorem duis excepteur aliqua. Est dolor sunt magna aute cillum ea ut laboris incididunt dolore elit.</p>
+                    <div class="info">
+                        <h3><i class="far fa-clock"></i> 2 hours</h3>
+                        <h3><i class="far fa-calendar-alt"></i> 6 month</h3>
+                        <h3><i class="fas fa-book"></i> 12 modules</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/course3.jpg" alt="">
+                <h3 class="price">$50</h3>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+                    </div>
+                    <a href="#" class="title">learn front end development</a>
+                    <p>Eu sint fugiat qui excepteur tempor excepteur eu quis. Deserunt elit mollit magna nulla enim voluptate ea deserunt cillum do et veniam occaecat incididunt. Duis consequat laborum cupidatat laborum consequat Lorem duis excepteur aliqua. Est dolor sunt magna aute cillum ea ut laboris incididunt dolore elit.</p>
+                    <div class="info">
+                        <h3><i class="far fa-clock"></i> 2 hours</h3>
+                        <h3><i class="far fa-calendar-alt"></i> 6 month</h3>
+                        <h3><i class="fas fa-book"></i> 12 modules</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/course4.jpg" alt="">
+                <h3 class="price">$50</h3>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+                    </div>
+                    <a href="#" class="title">learn front end development</a>
+                    <p>Eu sint fugiat qui excepteur tempor excepteur eu quis. Deserunt elit mollit magna nulla enim voluptate ea deserunt cillum do et veniam occaecat incididunt. Duis consequat laborum cupidatat laborum consequat Lorem duis excepteur aliqua. Est dolor sunt magna aute cillum ea ut laboris incididunt dolore elit.</p>
+                    <div class="info">
+                        <h3><i class="far fa-clock"></i> 2 hours</h3>
+                        <h3><i class="far fa-calendar-alt"></i> 6 month</h3>
+                        <h3><i class="fas fa-book"></i> 12 modules</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/course5.jpg" alt="">
+                <h3 class="price">$50</h3>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+                    </div>
+                    <a href="#" class="title">learn front end development</a>
+                    <p>Eu sint fugiat qui excepteur tempor excepteur eu quis. Deserunt elit mollit magna nulla enim voluptate ea deserunt cillum do et veniam occaecat incididunt. Duis consequat laborum cupidatat laborum consequat Lorem duis excepteur aliqua. Est dolor sunt magna aute cillum ea ut laboris incididunt dolore elit.</p>
+                    <div class="info">
+                        <h3><i class="far fa-clock"></i> 2 hours</h3>
+                        <h3><i class="far fa-calendar-alt"></i> 6 month</h3>
+                        <h3><i class="fas fa-book"></i> 12 modules</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <img src="images/course6.jpg" alt="">
+                <h3 class="price">$50</h3>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half"></i>
+                    </div>
+                    <a href="#" class="title">learn front end development</a>
+                    <p>Eu sint fugiat qui excepteur tempor excepteur eu quis. Deserunt elit mollit magna nulla enim voluptate ea deserunt cillum do et veniam occaecat incididunt. Duis consequat laborum cupidatat laborum consequat Lorem duis excepteur aliqua. Est dolor sunt magna aute cillum ea ut laboris incididunt dolore elit.</p>
+                    <div class="info">
+                        <h3><i class="far fa-clock"></i> 2 hours</h3>
+                        <h3><i class="far fa-calendar-alt"></i> 6 month</h3>
+                        <h3><i class="fas fa-book"></i> 12 modules</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- course section end -->
     <!-- jquery cdn link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- custom js file link -->
