added teacher section

--- a/index.html
+++ b/index.html
@@ -190,6 +190,14 @@
         </div>
     </section>
     <!-- course section end -->
+    <!-- teacher section start -->
+    <section class="teacher" id="teacher">
+        <h1 class="heading">our expert teachers</h1>
+        <p>Aliqua voluptate et nulla aute irure sint quis fugiat veniam anim irure officia. Anim sit pariatur sint dolore elit commodo elit incididunt anim elit. Labore consectetur exercitation deserunt mollit consectetur.
+            Aliqua Lorem dolore aute sit anim Lorem. Laboris qui laboris ullamco officia magna cillum et ex. Quis excepteur aliquip exercitation incididunt sit aute. Ex sit ullamco cupidatat cillum.</p>
+            <a href="#"><button class="btn">learn more</button></a>
+    </section>
+    <!-- teacher section end  -->
     <!-- jquery cdn link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- custom js file link -->
