add contact section

--- a/index.html
+++ b/index.html
@@ -198,6 +198,21 @@
             <a href="#"><button class="btn">learn more</button></a>
     </section>
     <!-- teacher section end  -->
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+        <h1 class="heading">contact us</h1>
+        <div class="row">
+            <form action="">
+                <input type="text" class="box" placeholder="full name">
+                <input type="email" class="box" placeholder="your email">
+                <input type="password" class="box" placeholder="your password">
+                <input type="number" class="box" placeholder="your number">
+                <textarea name="" id="" cols="30" rows="10" class="box address" placeholder="your address"></textarea>
+                <input type="submit" class="btn" value="send now">
+            </form>
+        </div>
+    </section>
+    <!-- contact section end -->
     <!-- jquery cdn link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- custom js file link -->
