--- a/index.html
+++ b/index.html
@@ -213,6 +213,35 @@
         </div>
     </section>
     <!-- contact section end -->
+    <!-- footer section start -->
+    <div class="footer">
+        <div class="box-container">
+            <div class="box">
+                <h3>branch location</h3>
+                <a href="#">Egypt</a>
+                <a href="#">India</a>
+                <a href="#">USA</a>
+                <a href="#">French</a>
+                <a href="#">Russia</a>
+            </div>
+            <div class="box">
+                <h3>quick links</h3>
+                <a href="#">home</a>
+                <a href="#">about</a>
+                <a href="#">course</a>
+                <a href="#">teachers</a>
+                <a href="#">contact</a>
+            </div>
+            <div class="box">
+                <h3>contact info</h3>
+                <p><i class="fas fa-map-marker-alt"></i>shekih zayed, egypt</p>
+                <p><i class="fas fa-envelope"></i>example@gmail.com</p>
+                <p><i class="fas fa-phone"></i>+211-209-999-78</p>
+            </div>
+        </div>
+        <h1 class="credit">created by <a href="#">Wessam Mustafa</a> all rights reserved.</h1>
+    </div>
+    <!-- footer section end -->
     <!-- jquery cdn link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- custom js file link -->
